// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page Content test  empty card should match the snapshot with loading card (<loading>) 1`] = `
<div
  className="page-content"
>
  <LoadingCard />
</div>
`;

exports[`page Content test  empty card should match the snapshot with props (<movie>) 1`] = `
<div
  className="page-content"
>
  <WithTrailerDynamic
    movie={
      Object {
        "data": Object {
          "director": "BB-8",
          "opening_crawl": "this is a crawl",
          "release_date": "1/1/1970",
          "title": "test title",
        },
      }
    }
  >
    <Component />
  </WithTrailerDynamic>
</div>
`;

exports[`page Content test  empty card should match the snapshot without props (empty) 1`] = `
<div
  className="page-content"
>
  <EmptyCard />
</div>
`;
